salesforce-main/src/main/default/objects/Instance__c/Instance__c.object-meta.xml
<CustomObject>
    <label>Instance</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Instance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>