salesforce-main/src/main/default/objects/Instance__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>The number of spots available on this Instance rolled up from the Sessions. The Instance availability will show the lowest availability from the session to ensure a student can book a spot on all sessions in a course</description>
    <label>Availability</label>
    <summarizedField>Session__c.Available__c</summarizedField>
    <summaryForeignKey>Session__c.Instance__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>