salesforce-main/src/main/default/objects/Instance__c/fields/Booked__c.field-meta.xml
<CustomField>
    <fullName>Booked__c</fullName>
    <description>The number of students booked onto this Instance</description>
    <formula>IF(ISBLANK(Availability__c), 0,Instance_Capacity__c - Availability__c)</formula>
    <label>Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>