salesforce-main/src/main/default/objects/Instance__c/fields/BPP_Instance_Status__c.field-meta.xml
<CustomField>
    <fullName>BPP_Instance_Status__c</fullName>
    <description>Shows that the instance is currently active</description>
    <label>Instance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>