salesforce-main/src/main/default/objects/Instance__c/fields/BPP_Replaced_By__c.field-meta.xml
<CustomField>
    <fullName>BPP_Replaced_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows the new instance that has replaced the current record</description>
    <label>Replaced By</label>
    <referenceTo>Instance__c</referenceTo>
    <relationshipLabel>Previous Instances</relationshipLabel>
    <relationshipName>Instances</relationshipName>
    <type>Lookup</type>
</CustomField>