salesforce-main/src/main/default/objects/Instance__c/fields/Client_Tags__c.field-meta.xml
<CustomField>
    <fullName>Client_Tags__c</fullName>
    <formula>Product__r.Client_Tags__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Tags</label>
    <type>Text</type>
</CustomField>