salesforce-main/src/main/default/objects/Instance__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <description>Course Type from the associated product record</description>
    <formula>Product__r.Course_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Type</label>
    <type>Text</type>
</CustomField>