salesforce-main/src/main/default/objects/Instance__c/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <description>This field was requested by the BPP integration team</description>
    <label>Deactivation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>