salesforce-main/src/main/default/objects/Instance__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of this Instance</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>