salesforce-main/src/main/default/objects/Instance__c/fields/Instance_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Instance_Capacity__c</fullName>
    <description>Capacity of this Instance. Populated by Product Factory integration on creation</description>
    <label>Instance Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>