salesforce-main/src/main/default/objects/Instance__c/fields/Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>Instance_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Product Factory ID for this course</description>
    <externalId>true</externalId>
    <label>Product Factory Instance ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>