salesforce-main/src/main/default/objects/Instance__c/fields/Instance_Name__c.field-meta.xml
<CustomField>
    <fullName>Instance_Name__c</fullName>
    <description>Longer Name field as requested by BPP</description>
    <label>Instance Name</label>
    <type>TextArea</type>
</CustomField>