salesforce-main/src/main/default/objects/Instance__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>TEXT(Product__r.Level_PQ__c)</formula>
    <label>Level</label>
    <type>Text</type>
</CustomField>