salesforce-main/src/main/default/objects/Instance__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location this Instance will be sat</description>
    <label>Default Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abingdon</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Doncaster</fullName>
            </value>
            <value>
                <fullName>Guernsey</fullName>
            </value>
            <value>
                <fullName>Jersey</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>London City</fullName>
            </value>
            <value>
                <fullName>London Holborn</fullName>
            </value>
            <value>
                <fullName>London King&apos;s Cross</fullName>
            </value>
            <value>
                <fullName>London Liverpool Street</fullName>
            </value>
            <value>
                <fullName>London Shepherd&apos;s Bush</fullName>
            </value>
            <value>
                <fullName>London Waterloo</fullName>
            </value>
            <value>
                <fullName>Maidstone</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Milton Keynes</fullName>
            </value>
            <value>
                <fullName>Newcastle</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Southampton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>