salesforce-main/src/main/default/objects/Instance__c/fields/Location_Financial_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Location_Financial_Dimension__c</fullName>
    <label>Location Financial Dimension</label>
    <length>100</length>
    <type>Text</type>
</CustomField>