salesforce-main/src/main/default/objects/Instance__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <formula>TEXT(Product__r.Paper__c)</formula>
    <label>Paper</label>
    <type>Text</type>
</CustomField>