salesforce-main/src/main/default/objects/Instance__c/fields/Paper_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Paper_Short_Name__c</fullName>
    <label>Paper Short Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>