salesforce-main/src/main/default/objects/Instance__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product related to this Instance</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Instances</relationshipLabel>
    <relationshipName>Instances</relationshipName>
    <type>Lookup</type>
</CustomField>