salesforce-main/src/main/default/objects/Instance__c/fields/Product_Factory_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Factory_Product_ID__c</fullName>
    <description>This field will hold the ID from the product factory product</description>
    <formula>Product__r.BPP_ProductFactoryID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Factory Product ID</label>
    <type>Text</type>
</CustomField>