salesforce-main/src/main/default/objects/Instance__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <formula>TEXT(Product__r.Qualification__c)</formula>
    <label>Qualification</label>
    <type>Text</type>
</CustomField>