salesforce-main/src/main/default/objects/Instance__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT(Product__r.Location_PQ__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>