salesforce-main/src/main/default/objects/Instance__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <description>Indicates the time of day the sessions on this course will take place</description>
    <label>Session Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Weekend - Full Day</fullName>
            </value>
            <value>
                <fullName>Weekday - Full Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>