salesforce-main/src/main/default/objects/Instance__c/fields/Sitting__c.field-meta.xml
<CustomField>
    <fullName>Sitting__c</fullName>
    <description>Populated by the Product Factory integration on creation</description>
    <label>Sitting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>