salesforce-main/src/main/default/objects/Instance__c/fields/Sitting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sitting_End_Date__c</fullName>
    <label>Sitting End Date</label>
    <type>Date</type>
</CustomField>