salesforce-main/src/main/default/objects/Instance__c/fields/Sitting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sitting_Start_Date__c</fullName>
    <label>Sitting Start Date</label>
    <type>Date</type>
</CustomField>