salesforce-main/src/main/default/objects/Instance__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of this course</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>