salesforce-main/src/main/default/objects/Instance__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <description>To indicate what Instance Stream to book the PQ Student onto.</description>
    <label>Stream</label>
    <length>255</length>
    <type>Text</type>
</CustomField>