salesforce-main/src/main/default/objects/Instance__c/fields/Study_Location__c.field-meta.xml
<CustomField>
    <fullName>Study_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Location</label>
    <referenceTo>Study_Location__c</referenceTo>
    <relationshipLabel>Instances</relationshipLabel>
    <relationshipName>Instances</relationshipName>
    <type>Lookup</type>
</CustomField>