salesforce-main/src/main/default/objects/Instance__c/fields/Study_Mode__c.field-meta.xml
<CustomField>
    <fullName>Study_Mode__c</fullName>
    <label>Study Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Face-to-Face</fullName>
            </value>
            <value>
                <fullName>Online Classroom</fullName>
            </value>
            <value>
                <fullName>Online Classroom Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>