salesforce-main/src/main/default/objects/Instance__c/fields/Tax_Levels__c.field-meta.xml
<CustomField>
    <fullName>Tax_Levels__c</fullName>
    <description>The tax level for the instance that will be pushed from product factory</description>
    <label>Tax Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZER</fullName>
            </value>
            <value>
                <fullName>UKC</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>NOR</fullName>
            </value>
            <value>
                <fullName>EXO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>