salesforce-main/src/main/default/objects/Instance__c/fields/X3_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>X3_Instance_Id__c</fullName>
    <description>X3 Instance Id</description>
    <label>X3 Instance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>