salesforce-main/src/main/default/objects/Instance__c/recordTypes/CBA_Instance.recordType-meta.xml
<RecordType>
    <fullName>CBA_Instance</fullName>
    <active>true</active>
    <label>CBA Instance</label>
</RecordType>