salesforce-main/src/main/default/objects/Instance__c/recordTypes/Instance.recordType-meta.xml
<RecordType>
    <fullName>Instance</fullName>
    <active>true</active>
    <label>Instance</label>
</RecordType>